# play_motion2-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.py  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/play_motion2/: client.hpp  motion_loader.hpp
msg/: Motion.msg
play_motion2/: CHANGELOG.rst  CMakeLists.txt  package.xml
play_motion2/config/: motion_planner_config.yaml
play_motion2/include/play_motion2/: types.hpp
play_motion2/launch/: play_motion2.launch.py
play_motion2/play_motion2/: __init__.py
play_motion2/src/play_motion2/: client.cpp  play_motion2_executor.cpp  play_motion2_mgr.cpp  play_motion2_mgr.hpp
play_motion2/src/utils/: motion_loader.cpp  motion_loader.hpp  motion_planner.cpp
play_motion2/test/: motion_loader_test.hpp  play_motion2_config.yaml  play_motion2_node_test.cpp  play_motion2_node_test.launch.py  test_client.py
play_motion2/test/controllers/src/: passthrough_controller.cpp  passthrough_controller.hpp  passthrough_controller_parameters.yaml
play_motion2/test/rrbot/: controllers.yaml
play_motion2_cli/: CHANGELOG.rst  README.md  package.xml  setup.py
play_motion2_cli/command/: play_motion.py
play_motion2_cli/play_motion2_cli/api/: __init__.py
play_motion2_cli/play_motion2_cli/verb/: info.py  run.py
play_motion2_cli/test/: test_cli.py
play_motion2_cli/test/fixtures/: play_motion_server.py
play_motion2_cli/verb/: __init__.py  list.py
play_motion2_msgs/: CHANGELOG.rst  package.xml
play_motion2_msgs/action/: PlayMotion2Raw.action
play_motion2_msgs/srv/: GetMotionInfo.srv  IsJointListReady.srv
rpm/: ros-humble-play-motion2-cli.spec  ros-humble-play-motion2-msgs.spec  ros-humble-play-motion2.spec  ros-jazzy-play-motion2-cli.spec  ros-kilted-play-motion2-cli.spec  ros-kilted-play-motion2-msgs.spec  template.spec
src/: play_motion2_main.cpp  run_motion.cpp
src/play_motion2/: play_motion2_executor.cpp  play_motion2_executor.hpp
src/utils/: motion_planner.hpp
srv/: AddMotion.srv  RemoveMotion.srv  SaveMotion.srv
test/: motion_loader_test.cpp  play_motion2_node_test.hpp  test_cli.py
test/fixtures/: play_motion_server.py
test/rrbot/: rrbot.launch.py  rrbot_system.cpp  rrbot_system.hpp
