<?xml version="1.0"?>
<package format="3">
  <name>play_motion2_cli</name>
  <version>1.8.0</version>
  <description>
    The play_motion command for ROS 2 command line tools.
  </description>

  <maintainer email="isaac.acevedo@pal-robotics.com">Isaac Acevedo</maintainer>

  <license>Apache License 2.0</license>

  <author email="isaac.acevedo@pal-robotics.com">Isaac Acevedo</author>

  <exec_depend>play_motion2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-timeout</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
